# ptrcheck-rs

./: Cargo.toml  LICENSE-MIT  README.md
doc/: typical.txt  verbose.txt  verbose2.txt
src/: main.rs
